<resources>
    <string name="app_name">BabiesAndBeyond</string>

    <string name="email">E-mail</string>
    <string name="invalid_email">Invalid E-mail</string>

    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="name">Name</string>
    <string name="invalid_name">Your name must be greater than 6 character</string>
    <string name="phone">Phone</string>
    <string name="invalid_phone">Invalid Phone</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_confirm_password">Password Don\'t Match</string>

    <string name="forget_password">Forget Password</string>
    <string name="hint">We Just Need Your Registered Email To Sent \n
    Your Password on It</string>
    <string name="send">Send</string>
    <string name="title_activity_main">HomeActivity</string>
    <string name="services">Services</string>
    <string name="events">Events</string>
    <string name="Workshops">Workshops</string>
    <string name="message">Messages</string>
    <string name="about_us">About Us</string>
    <string name="confirmation_without_payment">Confirmation Without Payment</string>
    <string name="confirmation_with_payment">Confirmation With Payment</string>
    <string name="pending">Pending</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_request">Send Request</string>
    <string name="choose_service">Choose Service</string>
    <string name="choose_date_from">Choose Date From</string>
    <string name="choose_date_to">Choose Date To</string>
    <string name="location">Location</string>
    <string name="type_here">Type Here</string>
    <string name="any">Any</string>
    <string name="coming">Coming</string>
    <string name="workshop">Workshop</string>

    <string name="event_name">Event Name</string>
    <string name="event_date_time_to">Event Date Time To</string>
    <string name="event_date_time_from">Event Date Time From</string>

    <string name="workshop_name">Workshop Name</string>
    <string name="workshop_date_time_to">Workshop Date Time To</string>
    <string name="workshop_date_time_from">Workshop Date Time From</string>

    <string name="speaker_bio">Speaker Bio</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="status">Status</string>
    <string name="event_description">Description</string>
    <string name="all_groups">All Groups</string>
    <string name="most_popular">Most Popular</string>
    <string name="my_groups">My Groups</string>
    <string name="create_groups">Create Groups</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="change_password">Change Password</string>
    <string name="view_history">View History</string>
    <string name="view_qr_code">View QR Code</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="my_task">My Tasks</string>



</resources>
