<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="tech.ntam.babiesandbeyond.view.dialog.ChangePasswordDialogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/museosans"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/gray_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/museosans"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/museosans"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/museosans"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="textPassword"
        android:fontFamily="@font/museosans"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/museosans"
        android:text="@string/submit"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/museosans"
        android:text="@string/cancel"
        android:textAllCaps="false" />
</LinearLayout>
