<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tech.ntam.babiesandbeyond.view.activities.UserSendRequestActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/museosans"
                android:text="@string/choose_date_from"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_choose_date_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/museosans"
                android:hint="@string/any" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/museosans"
                android:text="@string/choose_date_to"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_choose_date_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/museosans"
                android:hint="@string/any" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/museosans"
                android:text="@string/location"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/museosans"
                android:hint="@string/type_here" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/colorButton"
                android:fontFamily="@font/museosans"
                android:text="@string/send"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
