<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tech.ntam.babiesandbeyond.view.fragments.SignInFragment">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:fontFamily="@font/museosans"
            android:id="@+id/et_email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_password"
            android:fontFamily="@font/museosans"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:fontFamily="@font/museosans"
        android:id="@+id/btn_sign_in"
        android:background="@color/colorButton"
        android:text="@string/sign_in" />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:id="@+id/iv_google"
        android:fitsSystemWindows="true"
        android:fontFamily="@font/museosans"
        android:contentDescription="@null"
        android:layout_marginTop="20dp"
        android:src="@drawable/google"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tv_forget_password"
        android:fontFamily="@font/museosans"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password" />


</LinearLayout>